# ros2_doc

./: .gitignore
colcon_ws/src/cartographer_src/: CMakeLists.txt  package.xml
colcon_ws/src/cartographer_src/config/: turtlebot3_lds_2d.lua
colcon_ws/src/cartographer_src/launch/: cartographer_SimpleCar.launch.py  occupancy_grid.launch.py
colcon_ws/src/cex_pkg/: CMakeLists.txt  package.xml
colcon_ws/src/cex_pkg/action/: MoveTurtle.action
colcon_ws/src/cex_pkg/launch/: display.launch.py  simple_launch.py  sub_client_launch.py
colcon_ws/src/cex_pkg/script/: action.py  action_server.py  add_two_int.py  add_two_int_client.py  move_turtle.py  pub_sub.py  pub_two_num.py  simple_publisher.py  simple_subscriber.py  sub_client_add.py
colcon_ws/src/cex_pkg/urdf/: my_first_robot.urdf
colcon_ws/src/gazebo_src/: CMakeLists.txt  package.xml
colcon_ws/src/gazebo_src/launch/: gazebo_turtleworld.launch.py  gazebo_world.launch.py
colcon_ws/src/gazebo_src/worlds/: cafe_world.world
colcon_ws/src/nav2_src/: CMakeLists.txt  package.xml
colcon_ws/src/nav2_src/launch/: nav2_SimpleCar.launch.py  navigation_launch.py
gazebo_ws/src/mobilerobot/: CMakeLists.txt  README.md  package.xml
gazebo_ws/src/mobilerobot/config/: amcl_params.yaml  mobilerobot_lds_2d.lua  nav2_params.yaml  ros2_controllers.yaml
gazebo_ws/src/mobilerobot/launch/: cartographer.launch.py  display.launch.py  gazebo_launch.py  gazebohousebot_launch.py  mobilebot.launch.py  navigation_launch.py  occupancy_grid.launch.py
gazebo_ws/src/mobilerobot/map/: map.pgm  map.yaml
gazebo_ws/src/mobilerobot/rviz/: mobilrob.rviz  tb3_navigation2.rviz
gazebo_ws/src/mobilerobot/urdf/: gazebo_control.xacro  mobilebot.urdf.xacro  mobilerobot.xacro
gazebo_ws/src/simple_linefollower_robot/: CMakeLists.txt  package.xml
gazebo_ws/src/simple_linefollower_robot/config/: joint_names_line_follower_simple_model.yaml
gazebo_ws/src/simple_linefollower_robot/launch/: empty_world.launch.py  gazebo_empty.launch.py  line_robot_rviz.launch.py  spawn_line_robot.launch.py  test_gazebo.launch.py
gazebo_ws/src/simple_linefollower_robot/meshes/: LW_link.STL  RW_link.STL  base_link.STL  sphear_link.STL
gazebo_ws/src/simple_linefollower_robot/urdf/: line_follower_simple_model.csv  line_follower_simple_robot.urdf.xacro
gazebo_ws/src/simple_robot_car/: CMakeLists.txt  package.xml
gazebo_ws/src/simple_robot_car/config/: joint_names_simple_robot_car.yaml
gazebo_ws/src/simple_robot_car/launch/: display.launch  display.launch.py  gazebo.launch  robot_rviz.launch.py
gazebo_ws/src/simple_robot_car/meshes/: BL_wheel_link.STL  BR_wheel_link.STL  FL_wheel_link.STL  FR_wheel_link.STL  base_link.STL
gazebo_ws/src/simple_robot_car/urdf/: simple_robot_car.csv  simple_robot_car.urdf
gripper_car_ws/: INTEGRATION_SUMMARY.md
gripper_car_ws/backup/archive/arduino_bridge/: CMakeLists.txt  package.xml
gripper_car_ws/backup/archive/components/: CMakeLists.txt  package.xml
gripper_car_ws/backup/archive/four_wheel_bot/: CMakeLists.txt
gripper_car_ws/backup/archive/robot_bringup/: CMakeLists.txt  package.xml
gripper_car_ws/backup/archive/sensors/: CMakeLists.txt  package.xml
gripper_car_ws/src/mobile_arm_manipulator_config/: CMakeLists.txt  package.xml
gripper_car_ws/src/mobile_arm_manipulator_config/config/: joint_names_mobile_arm_bot_2.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_realtime_controllers.yaml
gripper_car_ws/src/mobile_arm_manipulator_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py
gripper_car_ws/src/mobile_arm_manipulator_config/scripts/: arduino_ros2_bridge.py
gripper_car_ws/src/mobile_arm_manipulator_config/urdf/: mobile_arm_bot.urdf.xacro  mobile_arm_bot_2.ros2_control.xacro  mobile_arm_bot_2.srdf  mobile_arm_bot_2.urdf.xacro
gripper_car_ws/src/mobile_manipulator_bringup/: .setup_assistant  CMakeLists.txt  COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  package.xml
gripper_car_ws/src/mobile_manipulator_bringup/config/arm/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.srdf  moveit_controllers.yaml
gripper_car_ws/src/mobile_manipulator_bringup/config/gazebo/: joint_names_manipulator_mobile_with_arm.yaml  mobile_manipulator.rviz
gripper_car_ws/src/mobile_manipulator_bringup/config/moveit/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  manipulator_mobile_bringup.ros2_control.xacro  manipulator_mobile_bringup.srdf  manipulator_mobile_bringup.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
gripper_car_ws/src/mobile_manipulator_bringup/launch/: bringup.launch.py  complete_system.launch.py  hardware_bringup.launch.py  moveit_control.launch.py  teleop_control.launch.py
gripper_car_ws/src/mobile_manipulator_bringup/launch/gazebo/: gazebo.launch.py  robot_state_publisher.launch.py  rviz.launch.py  spawn.launch.py
gripper_car_ws/src/mobile_manipulator_bringup/launch/hardware/: test_hardware.launch.py
gripper_car_ws/src/mobile_manipulator_bringup/launch/moveit/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
gripper_car_ws/src/mobile_manipulator_bringup/launch/sim/: gazebo.launch.py  moveit.launch.py
gripper_car_ws/src/mobile_manipulator_bringup/meshes/: arm_base_link.STL  gripper_base_link.STL  left_finger_link.STL  left_gear_link.STL  left_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  right_finger_link.STL  right_gear_link.STL  right_link.STL
gripper_car_ws/src/mobile_manipulator_bringup/scripts/: integrated_teleop_control.py  moveit_arm_controller.py
gripper_car_ws/src/mobile_manipulator_bringup/urdf/: gazebo_plugins.xacro  manipulator_mobile_with_arm.csv  manipulator_mobile_with_arm.urdf  mobile_arm.urdf.xacro  mobile_base.urdf.xacro  mobile_manipulator.ros2_control.xacro  mobile_manipulator.urdf.xacro
simple_auv_ws/src/rviz_sauv/: CMakeLists.txt  package.xml
(+100 files in other folders)
