<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartographer_src</name>
  <version>1.0.0</version>
  <description>
    Cartographer SLAM configuration package for 2D/3D mapping.
    Contains launch files, configuration parameters, and map files
    for Google Cartographer-based SLAM.
  </description>
  <maintainer email="vedheeshbkr@gmail.com">Vedheesh BKR</maintainer>
  <license>MIT</license>
  <author email="vedheeshbkr@gmail.com">Vedheesh BKR</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
