<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Complete robot integration - combines mobile base, arm, sensors, navigation, and control</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description packages -->
  <exec_depend>mobile_base</exec_depend>
  <exec_depend>arm_description</exec_depend>

  <!-- Control and planning -->
  <exec_depend>arm_moveit</exec_depend>
  <exec_depend>mobile_base_nav2</exec_depend>

  <!-- Hardware and sensors -->
  <exec_depend>arduino_bridge</exec_depend>
  <exec_depend>sensors</exec_depend>
  <exec_depend>teleop</exec_depend>

  <!-- Core ROS2 -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Simulation -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
